--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@mantine/hooks": "^7.17.0",
     "@mantine/modals": "^7.17.0",
     "@mantine/notifications": "^7.17.0",
+    "animejs": "^3.2.2",
     "dayjs": "^1.11.13",
     "firebase": "^11.3.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19",
+    "react-dom": "^19",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0"
   },
