--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ VITE_FIREBASE_PROJECT_ID=meetings-app-e0d49
 VITE_FIREBASE_STORAGE_BUCKET=meetings-app-e0d49.appspot.com
 VITE_FIREBASE_MESSAGING_SENDER_ID=157563105539
 VITE_FIREBASE_APP_ID=1:157563105539:web:39f17b092fbd43d0ff7936
+VITE_FIREBASE_VAPID_KEY=BOh9OGi9vKdQ77Drq4LFLrLV0KUWTmlSGJXMqcUohyOI3cFH_mdwXXpMKEkygXJlURjHTEvmHGBB9GCSup4r6sE
