Integra mob cel pixel

--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
-VITE_FIREBASE_API_KEY=AIzaSyDQTB1h7HCGhvH6u19Ol1ECEHIZhOWl2cI
-VITE_FIREBASE_AUTH_DOMAIN=meetings-app-e0d49.firebaseapp.com
-VITE_FIREBASE_PROJECT_ID=meetings-app-e0d49
-VITE_FIREBASE_STORAGE_BUCKET=meetings-app-e0d49.appspot.com
-VITE_FIREBASE_MESSAGING_SENDER_ID=157563105539
-VITE_FIREBASE_APP_ID=1:157563105539:web:39f17b092fbd43d0ff7936
+VITE_FIREBASE_API_KEY=AIzaSyDQU56TndLAXKr1SL4RbEVD1GQ7RyZlY0U
+VITE_FIREBASE_AUTH_DOMAIN=mobcelpixel.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=mobcelpixel
+VITE_FIREBASE_STORAGE_BUCKET=mobcelpixel.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=493838706416
+VITE_FIREBASE_APP_ID=1:493838706416:web:234670a24a3d6cf4f78435
+VITE_MEASUREMENT_ID=G-58QS228DPL
 VITE_FIREBASE_VAPID_KEY=BOh9OGi9vKdQ77Drq4LFLrLV0KUWTmlSGJXMqcUohyOI3cFH_mdwXXpMKEkygXJlURjHTEvmHGBB9GCSup4r6sE
