--- a/package.json
+++ b/package.json
@@ -10,18 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
     "@mantine/core": "^7.17.0",
     "@mantine/dates": "^7.17.0",
     "@mantine/hooks": "^7.17.0",
     "@mantine/modals": "^7.17.0",
     "@mantine/notifications": "^7.17.0",
+    "@tabler/icons-react": "^3.31.0",
     "animejs": "^3.2.2",
     "dayjs": "^1.11.13",
-    "firebase": "^11.3.1",
+    "firebase": "^11.4.0",
+    "qrcode.react": "^4.2.0",
     "react": "^19",
     "react-dom": "^19",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.2.0"
+    "react-router-dom": "^7.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
